Issue #8: Corrected flexbox wrap.

--- a/themes/custom/nickelback/css/global.css
+++ b/themes/custom/nickelback/css/global.css
@@ -5,8 +5,7 @@
 }
 
 .layout-container{
-  border: 1px solid #ccc;
-  width:80%;
+  max-width:1000px;
   margin: 0 auto;
   padding: .25rem;
 }
@@ -100,10 +99,33 @@ footer {
   margin: 0 1%;
 }
 
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (max-device-width : 480px) {
+  /* Styles */
+  .layout-sidebar-second{
+    flex-basis:100%;
+  }
+  .layout-content{
+    flex-basis:100%;
+  }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px) {
+  .layout-sidebar-second{
+    flex-basis:33%;
+  }
+  .layout-content{
+    flex-basis:60%;
+  }
+}
+
 .block-webform-block{
   background-color: #F4F4F4;
   padding:.5em;
-  flex-basis:33%;
+
 }
 
 .webform-input-100{
@@ -118,6 +140,7 @@ footer {
 
 .site-content{
   display:flex;
+  flex-wrap:wrap;
 }
 
 .mx-r{
